Add Amount of Noise on Diff Priv

--- a/Section 1 - Differential Privacy.ipynb
+++ b/Section 1 - Differential Privacy.ipynb
@@ -896,7 +896,7 @@
     "import torch\n",
     "\n",
     "# the number of entries in our database\n",
-    "# num_entries = 5000\n",
+    "#num_entries = 5000\n",
     "\n",
     "# function to remove column for privacy  - print first row\n",
     "def get_parallel_db(db, remove_index):\n",
@@ -955,7 +955,7 @@
    "outputs": [],
    "source": [
     "#create db 100\n",
-    "db, pdbs = create_db_and_parallels(100)"
+    "#db, pdbs = create_db_and_parallels(100)"
    ]
   },
   {
@@ -967,7 +967,7 @@
    "outputs": [],
    "source": [
     "#actual values from people\n",
-    "db"
+    "#db"
    ]
   },
   {
@@ -989,7 +989,7 @@
    "source": [
     "#add noise to data - mean replacing some values with random data\n",
     "#first coin flip for every value in db\n",
-    "first_coin_flip = (torch.rand(len(db)) > 0.5).float()"
+    "#first_coin_flip = (torch.rand(len(db)) > 0.5).float()"
    ]
   },
   {
@@ -999,7 +999,7 @@
    "outputs": [],
    "source": [
     "#second coin flip\n",
-    "second_coin_flip = (torch.rand(len(db)) > 0.5).float()"
+    "#second_coin_flip = (torch.rand(len(db)) > 0.5).float()"
    ]
   },
   {
@@ -1009,7 +1009,7 @@
    "outputs": [],
    "source": [
     "#display first_coin_flip\n",
-    "first_coin_flip"
+    "#first_coin_flip"
    ]
   },
   {
@@ -1019,7 +1019,7 @@
    "outputs": [],
    "source": [
     "#display second_coin_flip\n",
-    "second_coin_flip"
+    "#second_coin_flip"
    ]
   },
   {
@@ -1052,7 +1052,7 @@
     "# noise added to db entry\n",
     "# new augmented database which is differentially private\n",
     "\n",
-    "augmented_database = db.float() * first_coin_flip + (1 - first_coin_flip) * second_coin_flip\n",
+    "#augmented_database = db.float() * first_coin_flip + (1 - first_coin_flip) * second_coin_flip\n",
     "\n",
     "#augmented_database = (db.float() * first_coin_flip) + ((1 - first_coin_flip) * second_coin_flip)"
    ]
@@ -1077,7 +1077,74 @@
    "source": [
     "# CORRECT - de-skew towards higher end of output for db\n",
     "# result = tensor(0.7000)\n",
-    "torch.mean(augmented_database.float()) * 2 - 0.5"
+    "#db_result = torch.mean(augmented_database.float()) * 2 - 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def query(db):\n",
+    "    true_result = torch.mean(db.float())\n",
+    "    \n",
+    "    first_coin_flip = (torch.rand(len(db)) > 0.5).float()\n",
+    "    second_coin_flip = (torch.rand(len(db)) > 0.5).float()\n",
+    "    \n",
+    "    augmented_database = db.float() * first_coin_flip + (1 - first_coin_flip) * second_coin_flip\n",
+    "    \n",
+    "    db_result = torch.mean(augmented_database.float()) * 2 - 0.5\n",
+    "    return db_result, true_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db, pdbs = create_db_and_parallels(10)\n",
+    "private_result, true_result = query(db)\n",
+    "print(\"With Noise:\" + str(private_result))\n",
+    "print(\"Without Noise:\" + str(true_result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db, pdbs = create_db_and_parallels(100)\n",
+    "private_result, true_result = query(db)\n",
+    "print(\"With Noise:\" + str(private_result))\n",
+    "print(\"Without Noise:\" + str(true_result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db, pdbs = create_db_and_parallels(1000)\n",
+    "private_result, true_result = query(db)\n",
+    "print(\"With Noise:\" + str(private_result))\n",
+    "print(\"Without Noise:\" + str(true_result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#larger data set - noise averages out\n",
+    "db, pdbs = create_db_and_parallels(10000)\n",
+    "private_result, true_result = query(db)\n",
+    "print(\"With Noise:\" + str(private_result))\n",
+    "print(\"Without Noise:\" + str(true_result))"
    ]
   },
   {
@@ -1093,11 +1160,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# try this project here!"
+    "#start cells here - create simple db\n",
+    "import torch\n",
+    "\n",
+    "# the number of entries in our database\n",
+    "#num_entries = 5000\n",
+    "\n",
+    "# function to remove column for privacy  - print first row\n",
+    "def get_parallel_db(db, remove_index):\n",
+    "    \n",
+    "    return torch.cat((db[0:remove_index],\n",
+    "                     db[remove_index+1:]))\n",
+    "\n",
+    "\n",
+    "# function loop - parellel dbs\n",
+    "def get_parallel_dbs(db):\n",
+    "    \n",
+    "    parallel_dbs = list()\n",
+    "    \n",
+    "    for i in range(len(db)):\n",
+    "        pdb = get_parallel_db(db, i)\n",
+    "        parallel_dbs.append(pdb)\n",
+    "        \n",
+    "    return parallel_dbs   \n",
+    "\n",
+    "# function generate parallel db on fly and parallel dbs\n",
+    "# return tuples\n",
+    "def create_db_and_parallels(num_entries):\n",
+    "    db = torch.rand(num_entries) > 0.5\n",
+    "    pdbs = get_parallel_dbs(db)\n",
+    "    return db, pdbs\n",
+    "\n",
+    "\n",
+    "# function for sensitivity\n",
+    "def sensitivity(query, num_entries):\n",
+    "    \n",
+    "    #generate db and create parallel db\n",
+    "    db, pdbs = create_db_and_parallels(num_entries)\n",
+    "\n",
+    "    #query db\n",
+    "    full_db_result = query(db)\n",
+    "    \n",
+    "    #implicit calculation know that 1 is max in db for change\n",
+    "    max_distance = 0\n",
+    "    #for each parallel db\n",
+    "    for pdb in pdbs:\n",
+    "        pdb_result = query(pdb)\n",
+    "\n",
+    "        #compare full result to result\n",
+    "        db_distance = torch.abs(pdb_result - full_db_result)\n",
+    "    \n",
+    "        if(db_distance > max_distance):\n",
+    "            max_distance = db_distance\n",
+    "\n",
+    "    return max_distance "
    ]
   },
   {
@@ -1105,42 +1225,167 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#ignore this query as it has been refined for sk_results\n",
+    "'''\n",
+    "def query(db, noise=0.2):\n",
+    "    true_result = torch.mean(db.float())\n",
+    "    \n",
+    "    # add noise parameter\n",
+    "    first_coin_flip = (torch.rand(len(db)) > noise).float()\n",
+    "    second_coin_flip = (torch.rand(len(db)) > 0.5).float()\n",
+    "    \n",
+    "    augmented_database = db.float() * first_coin_flip + (1 - first_coin_flip) * second_coin_flip\n",
+    "    \n",
+    "    # reskewing events\n",
+    "    db_result = torch.mean(augmented_database.float()) * 2 - 0.5\n",
+    "    return db_result, true_result\n",
+    "    \n",
+    "'''"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "true_dist_mean = 0.7  # 70% of people said yes\n",
+    "noise_dist_mean = 0.5 # 50/50 coin flip"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "augmented_database_mean = (true_dist_mean + noise_dist_mean) / 2\n",
+    "augmented_database_mean\n",
+    "\n",
+    "#result 0.6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#noise querey with  sk_results\n",
+    "def query(db, noise=0.2):\n",
+    "    \n",
+    "    true_result = torch.mean(db.float())\n",
+    "    \n",
+    "    # add noise parameter\n",
+    "    first_coin_flip = (torch.rand(len(db)) > noise).float()\n",
+    "    second_coin_flip = (torch.rand(len(db)) > 0.5).float()\n",
+    "    \n",
+    "    augmented_database = db.float() * first_coin_flip + (1 - first_coin_flip) * second_coin_flip\n",
+    "    \n",
+    "    # skewing\n",
+    "    sk_result = augmented_database.float().mean()\n",
+    "    \n",
+    "    private_result = ((sk_result / noise) - 0.5) * noise / (1 - noise)\n",
+    "    \n",
+    "    return private_result, true_result"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#data set - noise parameter added\n",
+    "db, pdbs = create_db_and_parallels(100)\n",
+    "private_result, true_result = query(db, noise=0.1)\n",
+    "print(\"With Noise:\" + str(private_result))\n",
+    "print(\"Without Noise:\" + str(true_result))\n",
+    "\n",
+    "'''\n",
+    "Result\n",
+    "With Noise:tensor(0.4889)\n",
+    "Without Noise:tensor(0.5200)\n",
+    "\n",
+    "'''"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#data set - noise parameter added\n",
+    "db, pdbs = create_db_and_parallels(100)\n",
+    "private_result, true_result = query(db, noise=0.2)\n",
+    "print(\"With Noise:\" + str(private_result))\n",
+    "print(\"Without Noise:\" + str(true_result))\n",
+    "\n",
+    "'''\n",
+    "result\n",
+    "With Noise:tensor(0.5250)\n",
+    "Without Noise:tensor(0.5500)\n",
+    "'''"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#data set - noise parameter added\n",
+    "db, pdbs = create_db_and_parallels(100)\n",
+    "private_result, true_result = query(db, noise=0.4)\n",
+    "print(\"With Noise:\" + str(private_result))\n",
+    "print(\"Without Noise:\" + str(true_result))\n",
+    "'''\n",
+    "result\n",
+    "With Noise:tensor(0.4500)\n",
+    "Without Noise:tensor(0.4500)\n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#data set - noise parameter added increase noise greatly\n",
+    "db, pdbs = create_db_and_parallels(100)\n",
+    "private_result, true_result = query(db, noise=0.8)\n",
+    "print(\"With Noise:\" + str(private_result))\n",
+    "print(\"Without Noise:\" + str(true_result))\n",
+    "\n",
+    "'''\n",
+    "result\n",
+    "With Noise:tensor(0.0500)\n",
+    "Without Noise:tensor(0.6200)\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#data set - noise parameter  - increase dataset comes back closer to noise\n",
+    "db, pdbs = create_db_and_parallels(10000)\n",
+    "private_result, true_result = query(db, noise=0.8)\n",
+    "print(\"With Noise:\" + str(private_result))\n",
+    "print(\"Without Noise:\" + str(true_result))\n",
+    "'''\n",
+    "result\n",
+    "With Noise:tensor(0.5340)\n",
+    "Without Noise:tensor(0.4970)\n",
+    "\n",
+    "'''"
+   ]
   },
   {
    "cell_type": "code",
@@ -1178,9 +1423,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(58.)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "db, pdbs = create_db_and_parallels(100)\n",
     "\n",
