--- a/Section 1 - Differential Privacy.ipynb
+++ b/Section 1 - Differential Privacy.ipynb
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1268,11 +1268,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#noise querey with  sk_results\n",
+    "# add noise to each data point = LOCAL DIFFERENTIAL PRIVACY\n",
     "def query(db, noise=0.2):\n",
     "    \n",
     "    true_result = torch.mean(db.float())\n",
@@ -1388,27 +1389,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1423,21 +1403,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(58.)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#Add noise AFTER data aggregated\n",
+    "# GLOBAL DIFFERENTIAL PRIVACY\n",
+    "\n",
     "db, pdbs = create_db_and_parallels(100)\n",
     "\n",
     "def query(db):\n",
@@ -1536,68 +1508,282 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# try this project here!"
+    "#start cells here - create simple db\n",
+    "import torch\n",
+    "\n",
+    "# the number of entries in our database\n",
+    "#num_entries = 5000\n",
+    "\n",
+    "# function to remove column for privacy  - print first row\n",
+    "def get_parallel_db(db, remove_index):\n",
+    "    \n",
+    "    return torch.cat((db[0:remove_index],\n",
+    "                     db[remove_index+1:]))\n",
+    "\n",
+    "\n",
+    "# function loop - parellel dbs\n",
+    "def get_parallel_dbs(db):\n",
+    "    \n",
+    "    parallel_dbs = list()\n",
+    "    \n",
+    "    for i in range(len(db)):\n",
+    "        pdb = get_parallel_db(db, i)\n",
+    "        parallel_dbs.append(pdb)\n",
+    "        \n",
+    "    return parallel_dbs   \n",
+    "\n",
+    "# function generate parallel db on fly and parallel dbs\n",
+    "# return tuples\n",
+    "def create_db_and_parallels(num_entries):\n",
+    "    db = torch.rand(num_entries) > 0.5\n",
+    "    pdbs = get_parallel_dbs(db)\n",
+    "    return db, pdbs\n",
+    "\n",
+    "\n",
+    "# function for sensitivity\n",
+    "def sensitivity(query, num_entries):\n",
+    "    \n",
+    "    #generate db and create parallel db\n",
+    "    db, pdbs = create_db_and_parallels(num_entries)\n",
+    "\n",
+    "    #query db\n",
+    "    full_db_result = query(db)\n",
+    "    \n",
+    "    #implicit calculation know that 1 is max in db for change\n",
+    "    max_distance = 0\n",
+    "    #for each parallel db\n",
+    "    for pdb in pdbs:\n",
+    "        pdb_result = query(pdb)\n",
+    "\n",
+    "        #compare full result to result\n",
+    "        db_distance = torch.abs(pdb_result - full_db_result)\n",
+    "    \n",
+    "        if(db_distance > max_distance):\n",
+    "            max_distance = db_distance\n",
+    "\n",
+    "    return max_distance "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#epsilon budget - lower epsilon is more noise - more randomized\n",
+    "epsilon = 0.5"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#create db as 1s and 0s\n",
+    "db, pdbs = create_db_and_parallels(100)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1, 0, 0, 1, 0, 0, 1, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0, 1, 1, 1, 0, 0, 0, 1,\n",
+       "        0, 0, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1,\n",
+       "        1, 0, 0, 0, 1, 0, 0, 1, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 1,\n",
+       "        1, 0, 0, 0, 1, 0, 1, 0, 0, 1, 1, 0, 1, 0, 1, 0, 1, 1, 0, 0, 1, 1, 0, 1,\n",
+       "        1, 1, 0, 1], dtype=torch.uint8)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#display db of 0s and 1s\n",
+    "db"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(48, dtype=torch.uint8)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#sumo of the db\n",
+    "sum(db)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([2, 0, 0, 2, 0, 0, 2, 0, 2, 0, 0, 2, 2, 0, 0, 2, 0, 2, 2, 2, 0, 0, 0, 2,\n",
+       "        0, 0, 2, 0, 2, 2, 2, 0, 2, 2, 2, 0, 2, 0, 2, 0, 2, 0, 0, 0, 0, 0, 0, 2,\n",
+       "        2, 0, 0, 0, 2, 0, 0, 2, 2, 0, 2, 0, 2, 2, 2, 0, 2, 2, 0, 0, 0, 0, 0, 2,\n",
+       "        2, 0, 0, 0, 2, 0, 2, 0, 0, 2, 2, 0, 2, 0, 2, 0, 2, 2, 0, 0, 2, 2, 0, 2,\n",
+       "        2, 2, 0, 2], dtype=torch.uint8)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#change to 2s and 0s\n",
+    "(db * 2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(96, dtype=torch.uint8)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#totalling up all the 2s and 0s\n",
+    "sum(db * 2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#query summing up db\n",
+    "def sum_query(db):\n",
+    "    return sum(db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(48, dtype=torch.uint8)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum_query(db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def laplacian_mechanism(db, query, sensitivity):\n",
+    "    beta = sensitivity / epsilon\n",
+    "    noise = torch.tensor(np.random.laplace(0, beta, 1))\n",
+    "    \n",
+    "    return query(db) + noise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mean_query(db):\n",
+    "    return torch.mean(db.float()) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([46.2111], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "laplacian_mechanism(db, sum_query, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.4907], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "laplacian_mechanism(db, mean_query, 1/100)"
+   ]
   },
   {
    "cell_type": "markdown",
