--- a/Section 1 - Differential Privacy.ipynb
+++ b/Section 1 - Differential Privacy.ipynb
@@ -1920,7 +1920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2011,20 +2011,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# need to find leakage - how much epsilon is lost\n",
     "# label most hospitals agree on\n",
@@ -2038,20 +2027,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "W0709 05:33:53.763200  2400 <ipython-input-3-217ff38cf1e9>:4] Worrying Stuff\n",
-      "W0709 05:33:56.241200  2400 secure_random.py:26] Falling back to insecure randomness since the required custom op could not be found for the installed version of TensorFlow. Fix this by compiling custom ops. Missing file was 'C:\\Users\\Claudia\\Anaconda3\\lib\\site-packages\\tf_encrypted/operations/secure_random/secure_random_module_tf_1.14.0.so'\n",
-      "W0709 05:33:56.253200  2400 deprecation_wrapper.py:119] From C:\\Users\\Claudia\\Anaconda3\\lib\\site-packages\\tf_encrypted\\session.py:26: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#get rid of WARNinG: logging before flag parsing goes to stderr\n",
     "from absl import logging\n",
@@ -2063,7 +2041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2078,18 +2056,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data Independent Epsilon:  11.756462732485115\n",
-      "Data Dependent Epsilon:  11.756462732485105\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#data dependent epsilon, data independent epsilon - with data_ind_eps slightly higher\n",
     "data_dep_eps, data_ind_eps = pate.perform_analysis(teacher_preds=preds, indices=indices, noise_eps=0.1, delta=1e-5)\n",
@@ -2099,7 +2068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2109,18 +2078,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data Independent Epsilon:  11.756462732485115\n",
-      "Data Dependent Epsilon:  7.314424716658644\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#data dependent epsilon, data independent epsilon - with data_ind_eps slightly higher\n",
     "#lower dependent due to preds statement above:\n",
@@ -2134,19 +2094,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: May not have used enough values of l. Increase 'moments' variable and run again.\n",
-      "Data Independent Epsilon:  11.756462732485115\n",
-      "Data Dependent Epsilon:  1.52655213289881\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#first 50 hospitals agreed on values- see decrease in dependent epsilon to  1.52655213289881\n",
     "# add parameter after delta \", moments=20\"\n",
@@ -2208,13 +2158,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2238,20 +2181,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2262,99 +2191,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to ./data\\MNIST\\raw\\train-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "9920512it [00:07, 1327336.37it/s]                                              \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data\\MNIST\\raw\\train-images-idx3-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to ./data\\MNIST\\raw\\train-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "32768it [00:00, 372363.39it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data\\MNIST\\raw\\train-labels-idx1-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to ./data\\MNIST\\raw\\t10k-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1654784it [00:01, 881611.15it/s]                                               \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data\\MNIST\\raw\\t10k-images-idx3-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to ./data\\MNIST\\raw\\t10k-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "8192it [00:00, 182044.14it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data\\MNIST\\raw\\t10k-labels-idx1-ubyte.gz\n",
-      "Processing...\n",
-      "Done!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import torchvision.datasets as datasets\n",
+    "# Lesson 6: Section Project\n",
+    "# Goal: Train a DP model using PATE method on the MNIST dataset\n",
+    "'''\n",
+    "Steps:\n",
+    "1.load dataset MNIST\n",
+    "2.divide data into 10 random subsets\n",
+    "3.train 10 models with each model trained on one of the subsets\n",
+    "4.use the test set of the original dataset and use the 10 trained models \n",
+    "5.generate labels for each data point in test set\n",
+    "6.label each test set data point with the most recurring prediction by the trained models\n",
+    "7.perform PATE analysis on data set\n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch.utils import data\n",
+    "import random\n",
+    "import torchvision.datasets as datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#download data set\n",
     "mnist_trainset = datasets.MNIST(root='./data', train=True, download=True, transform=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Claudia\\Anaconda3\\lib\\site-packages\\torchvision\\datasets\\mnist.py:53: UserWarning: train_data has been renamed data\n",
-      "  warnings.warn(\"train_data has been renamed data\")\n",
-      "C:\\Users\\Claudia\\Anaconda3\\lib\\site-packages\\torchvision\\datasets\\mnist.py:43: UserWarning: train_labels has been renamed targets\n",
-      "  warnings.warn(\"train_labels has been renamed targets\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_data = mnist_trainset.train_data\n",
     "train_targets = mnist_trainset.train_labels"
@@ -2362,20 +2244,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Claudia\\Anaconda3\\lib\\site-packages\\torchvision\\datasets\\mnist.py:58: UserWarning: test_data has been renamed data\n",
-      "  warnings.warn(\"test_data has been renamed data\")\n",
-      "C:\\Users\\Claudia\\Anaconda3\\lib\\site-packages\\torchvision\\datasets\\mnist.py:48: UserWarning: test_labels has been renamed targets\n",
-      "  warnings.warn(\"test_labels has been renamed targets\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_data = mnist_trainset.test_data\n",
     "test_targets = mnist_trainset.test_labels"
