--- a/Section 2 - Federated Learning.ipynb
+++ b/Section 2 - Federated Learning.ipynb
@@ -138,8 +138,20 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W0717 05:29:58.602000  1976 secure_random.py:26] Falling back to insecure randomness since the required custom op could not be found for the installed version of TensorFlow. Fix this by compiling custom ops. Missing file was 'C:\\Users\\Claudia\\Anaconda3\\lib\\site-packages\\tf_encrypted/operations/secure_random/secure_random_module_tf_1.14.0.so'\n",
+      "W0717 05:29:58.630000  1976 deprecation_wrapper.py:119] From C:\\Users\\Claudia\\Anaconda3\\lib\\site-packages\\tf_encrypted\\session.py:26: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
     "import syft as sy"
    ]
   },
@@ -149,6 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#modifies pytorch\n",
     "hook = sy.TorchHook(th)"
    ]
   },
@@ -169,6 +182,7 @@
     }
    ],
    "source": [
+    "#pytorch continues to work as before\n",
     "th.tensor([1,2,3,4,5])"
    ]
   },
@@ -2317,7 +2331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
