Continued Securing Federated Learning

--- a/Section 3 - Securing Federated Learning.ipynb
+++ b/Section 3 - Securing Federated Learning.ipynb
@@ -37,9 +37,113 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W0731 06:09:13.055002  7712 secure_random.py:26] Falling back to insecure randomness since the required custom op could not be found for the installed version of TensorFlow. Fix this by compiling custom ops. Missing file was 'C:\\Users\\Claudia\\Anaconda3\\lib\\site-packages\\tf_encrypted/operations/secure_random/secure_random_module_tf_1.14.0.so'\n",
+      "W0731 06:09:13.079002  7712 deprecation_wrapper.py:119] From C:\\Users\\Claudia\\Anaconda3\\lib\\site-packages\\tf_encrypted\\session.py:26: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import syft as sy\n",
+    "import torch as th\n",
+    "hook = sy.TorchHook(th)\n",
+    "from torch import nn, optim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# try this project here!"
+    "# create a couple of workers\n",
+    "\n",
+    "bob = sy.VirtualWorker(hook, id=\"bob\")\n",
+    "alice = sy.VirtualWorker(hook, id=\"alice\")\n",
+    "secure_worker = sy.VirtualWorker(hook, id=\"secure_worker\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "W0731 06:09:14.056003  7712 base.py:628] Worker alice already exists. Replacing old worker which could cause                     unexpected behavior\n",
+      "W0731 06:09:14.064002  7712 base.py:628] Worker secure_worker already exists. Replacing old worker which could cause                     unexpected behavior\n",
+      "W0731 06:09:14.068003  7712 base.py:628] Worker bob already exists. Replacing old worker which could cause                     unexpected behavior\n",
+      "W0731 06:09:14.070003  7712 base.py:628] Worker secure_worker already exists. Replacing old worker which could cause                     unexpected behavior\n",
+      "W0731 06:09:14.072003  7712 base.py:628] Worker alice already exists. Replacing old worker which could cause                     unexpected behavior\n",
+      "W0731 06:09:14.073003  7712 base.py:628] Worker bob already exists. Replacing old worker which could cause                     unexpected behavior\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<VirtualWorker id:secure_worker #objects:0>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bob.add_workers([alice, secure_worker])\n",
+    "alice.add_workers([bob, secure_worker])\n",
+    "secure_worker.add_workers([alice, bob])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#A Toy Dataset\n",
+    "data = th.tensor([[0,0],[0,1],[1,0],[1,1.]], requires_grad=True)\n",
+    "target = th.tensor([[0],[0],[1],[1.]], requires_grad=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get pointers to training data on each worker by\n",
+    "# sending some training data to bob and alice\n",
+    "bobs_data = data[0:2].send(bob)\n",
+    "bobs_target = target[0:2].send(bob)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alices_data = data[2:].send(alice)\n",
+    "alices_target = target[2:].send(alice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize a Toy Model\n",
+    "model = nn.Linear(2,1)"
    ]
   },
   {
@@ -47,35 +151,163 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# SKIP -  for iter in range(10):\n",
+    "\n",
+    "#copy model\n",
+    "bobs_model = model.copy().send(bob)\n",
+    "alices_model = model.copy().send(alice)\n",
+    "\n",
+    "#optimize bob and alice's model\n",
+    "bobs_opt = optim.SGD(params=bobs_model.parameters(), lr=0.1)\n",
+    "alices_opt = optim.SGD(params=alices_model.parameters(), lr=0.1)    \n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# SKIP - begin training model by zero our gradient\n",
+    "# backward propatation\n",
+    "\n",
+    "for i in range(10):\n",
+    "    \n",
+    "    #Train Bob's model\n",
+    "    bobs_opt.zero_grad()\n",
+    "    bobs_pred = bobs_model(bobs_data)\n",
+    "    bobs_loss = ((bobs_pred - bobs_target) **2).sum()\n",
+    "    bobs_loss.backward()\n",
+    "\n",
+    "    bobs_opt.step()\n",
+    "    bobs_loss = bobs_loss.get().data\n",
+    "    bobs_loss\n",
+    " \n",
+    "    #Train alice's model\n",
+    "    alices_opt.zero_grad()\n",
+    "    alices_pred = alices_model(alices_data)\n",
+    "    alices_loss = ((alices_pred - alices_target) **2).sum()\n",
+    "    alices_loss.backward()\n",
+    "\n",
+    "    alices_opt.step()\n",
+    "    alices_loss = alices_loss.get().data\n",
+    "        \n",
+    "    print(\"Bob:\" + str(bobs_loss) + \" Alice:\" + str(alices_loss))      \n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# SKIP - send both updated models to a secure worker\n",
+    "alices_model.move(secure_worker)\n",
+    "bobs_model.move(secure_worker)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# SKIP average the models\n",
+    "with th.no_grad():\n",
+    "    model.weight.set_(((alices_model.weight.data + bobs_model.weight.data) / 2).get())\n",
+    "    model.bias.set_(((alices_model.bias.data + bobs_model.bias.data) / 2).get())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bob:tensor(0.0269) Alice:tensor(4.1252e-05)\n",
+      "Bob:tensor(0.0147) Alice:tensor(0.0007)\n",
+      "Bob:tensor(0.0096) Alice:tensor(0.0009)\n",
+      "Bob:tensor(0.0067) Alice:tensor(0.0009)\n",
+      "Bob:tensor(0.0049) Alice:tensor(0.0007)\n",
+      "Bob:tensor(0.0036) Alice:tensor(0.0006)\n",
+      "Bob:tensor(0.0027) Alice:tensor(0.0004)\n",
+      "Bob:tensor(0.0020) Alice:tensor(0.0003)\n",
+      "Bob:tensor(0.0015) Alice:tensor(0.0003)\n",
+      "Bob:tensor(0.0011) Alice:tensor(0.0002)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# RUN THIS\n",
+    "#iterate model\n",
+    "# run AFTER Initialize a Toy Model\n",
+    "for round_iter in range(10):\n",
+    "    \n",
+    "    bobs_model = model.copy().send(bob)\n",
+    "    alices_model = model.copy().send(alice)\n",
+    "\n",
+    "    bobs_opt = optim.SGD(params=bobs_model.parameters(),lr=0.1)\n",
+    "    alices_opt = optim.SGD(params=alices_model.parameters(),lr=0.1)\n",
+    "\n",
+    "    for i in range(10):\n",
+    "    \n",
+    "        #Train Bob's model\n",
+    "        bobs_opt.zero_grad()\n",
+    "        bobs_pred = bobs_model(bobs_data)\n",
+    "        bobs_loss = ((bobs_pred - bobs_target) **2).sum()\n",
+    "        bobs_loss.backward()\n",
+    "\n",
+    "        bobs_opt.step()\n",
+    "        bobs_loss = bobs_loss.get().data\n",
+    "        bobs_loss\n",
+    " \n",
+    "        #Train alice's model\n",
+    "        alices_opt.zero_grad()\n",
+    "        alices_pred = alices_model(alices_data)\n",
+    "        alices_loss = ((alices_pred - alices_target) **2).sum()\n",
+    "        alices_loss.backward()\n",
+    "\n",
+    "        alices_opt.step()\n",
+    "        alices_loss = alices_loss.get().data\n",
+    "        \n",
+    "    #Move alices model to secure_worker\n",
+    "    alices_model.move(secure_worker)\n",
+    "    bobs_model.move(secure_worker)\n",
+    " \n",
+    "    # average weights and bias\n",
+    "    with th.no_grad():\n",
+    "        model.weight.set_(((alices_model.weight.data + bobs_model.weight.data) / 2).get())\n",
+    "        model.bias.set_(((alices_model.bias.data + bobs_model.bias.data) / 2).get())     \n",
+    "        \n",
+    "    print(\"Bob:\" + str(bobs_loss) + \" Alice:\" + str(alices_loss)) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<VirtualWorker id:secure_worker #objects:0>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# cleared the secure worker\n",
+    "secure_worker.clear_objects()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -92,7 +324,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n1.create method accepting two input parameters\\na. number to be encrypted\\nb. number of shares to be split into and returns a tuple of shares\\nencrypt()\\n\\n2. create method called decrypt accepts input\\na. typle of shares\\ndecrypt()\\n\\n3.\\n\\n'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "1.create method accepting two input parameters\n",
+    "a. number to be encrypted\n",
+    "b. number of shares to be split into and returns a tuple of shares\n",
+    "encrypt()\n",
+    "\n",
+    "2. create method called decrypt accepts\n",
+    "a. input typle of shares\n",
+    "b. returns decrypted value\n",
+    "decrypt()\n",
+    "\n",
+    "3. create method accepts\n",
+    "a. two tuples of shares\n",
+    "b. returns a single tuple shares which are added correctly\n",
+    "add()\n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,20 +376,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "bob_x_share = 2\n",
     "alice_x_share = 3\n",
@@ -141,20 +398,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "bob_x_share = 2 * 2\n",
     "alice_x_share = 3 * 2\n",
@@ -172,20 +418,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# encrypted \"5\"\n",
     "bob_x_share = 2\n",
@@ -216,20 +451,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "23740629843736686616461"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 5\n",
     "\n",
@@ -242,20 +466,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "(bob_x_share + alice_x_share) % Q"
    ]
@@ -278,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,60 +578,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "35000"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "encode(3.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.5"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "decode(35000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7.8"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = encrypt(encode(5.5))\n",
     "y = encrypt(encode(2.3))\n",
@@ -437,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,21 +655,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{35498656553: tensor([  10235770278698899, 1401398179551373756, 2277280072169145491,\n",
-       "          636965538565031298,  913795591610271305])}"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "bob._objects"
    ]
@@ -503,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,44 +680,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(Wrapper)>[AdditiveSharingTensor]\n",
-       "\t-> (Wrapper)>[PointerTensor | me:23637986557 -> bob:30254176063]\n",
-       "\t-> (Wrapper)>[PointerTensor | me:18229131498 -> alice:75856222543]\n",
-       "\t-> (Wrapper)>[PointerTensor | me:34301722959 -> secure_worker:75419815101]\n",
-       "\t*crypto provider: me*"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([ 2,  4,  6,  8, 10])"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y.get()"
    ]
@@ -565,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,27 +716,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([0.1000, 0.2000, 0.3000])"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,27 +734,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([100, 200, 300])"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x.child.child"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,20 +752,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([0.2000, 0.4000, 0.6000])"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y = y.float_prec()\n",
     "y"
@@ -662,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,20 +798,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([0.2000, 0.4000, 0.6000])"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y.get().float_prec()"
    ]
@@ -759,7 +857,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
